Cleanup: Use interface type instead of concrete type
Resolves codacy code style warning:
> Avoid using implementation types like 'LinkedHashMap'; use the interface instead

Second, minor simplificaton in MoveBatcherTest to unnecessary list wrapping.